client/src/components/styles.css
.welcomeHeader {
  margin: 10px;
  color: teal;
  display: flex;
  justify-content: center;
}

.registerBTN {
  background-color: #ee8c3a !important;
  padding-bottom: 100px;
}

.loginBTN {
  background-color: rgba(27, 18, 78, 0.89) !important;
  color:#fff;
}
.nav-bar {
  background: rgb(1, 3, 75);
  height:100px;
  display: flex;
}
.nav-bar-header {
  padding-left: 100px;
  font-size: 40px;
  font-weight: 100;
  padding-bottom: 30px;
  padding-right:200px;
}
.logo {
  background-color: white;
  height:100px;
  width:190px;
}
.button {
  margin-right: auto;
  font-size: 20px;
  border-radius: 0px;
  color: white;
  padding-right: 20px;
}
.button:hover {
  color: rgba(199, 113, 2, 0.877);
}

.auth-main {
  height: 100vh;
  background-color: #eaeaea;
}

.auth-content {
  left: 50%;
  width: 500px;
  position: fixed;
  
  top: 50%;
  transform: translate(-50%, -50%);
}

.auth-card {
  background-color: #ffffff;
  box-shadow: 3px 3px 8px #888888;
  border-radius: 4px;
  width: 400px;
  min-width: 300px;
  text-align: center;
}
.auth-logo {
  width: 118px;
  margin-bottom: -10px;
}
.auth-form {
  margin-top: 35px;
}
.auth-input-field {
  font-size: 18px;
  margin-bottom: 25px;
}

